# Robomesh

./: .env.example  .gitignore  BUGS.md  CLAUDE.md  DESIGN.md  README.md  TASKS.md  TODO.md  defaults.env  docker-compose.dev.yml  docker-compose.yml
db/: .dbmate.yml  .env.example  docker-compose.yml  init.sql  seed.sql
db/migrations/: 001_initial_schema.sql
docs/: COMM_BUS.md  CONFIGURATION.md  HANDLER.md  HEARTBEAT.md  HTTP_API.md  MQTT.md  PROTOCOL.md  TCP.md  TERMINAL.md  UDP.md
frontend_app/: .env.example  Dockerfile  notes.md  package-lock.json  package.json  tailwind.config.js  todo.md
frontend_app/src/: app.css  app.html
frontend_app/src/lib/: backend_paths.ts  const.ts  index.ts  types.ts
frontend_app/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts
handlers/: example_robot.sh
handlers/_template/: handler.py  start_handler.sh
handlers/_template/frontend/: package.json  vite.config.js
handlers/example_robot/: test_client.py
handlers/test_robot/: handler.py  start_handler.sh
roboserver/: .gitignore  Dockerfile  Robot_Development.md  config.yaml  docker-build.sh  go.mod  go.sum  main.go  run-server.sh  todo.md
roboserver/auth/: handshake.go  heartbeat.go  heartbeat_handler.go  jwt.go  jwt_test.go  nonce.go  user_jwt.go  verify.go  verify_test.go
roboserver/comms/: comms.go  local.go  local_test.go
roboserver/database/: database_interface.go  databases.go  mongodb.go  postgres.go  redis.go  redis_test.go
roboserver/handler_engine/: manager.go  process.go  process_test.go  registry.go  reverse_connect.go  types.go
roboserver/http_server/: auth.go  auth_test.go  ephemeral.go  events.go  handler.go  handler_test.go  heartbeat.go  heartbeat_test.go  http_server.go  http_server_interface.go  plugins.go  provision.go  register.go  register_test.go  robot.go  types.go  util.go  util_test.go
roboserver/mqtt_server/: acl_hook.go  bridge_hook.go  mqtt_server.go  mqtt_server_interface.go  mqtt_server_test.go
roboserver/roboserver/: roboserver.go
roboserver/robots/: readme.md  register.go
roboserver/shared/: base_robot.go  config.go  config_test.go  debug.go  default_msg.go  errors.go  robot_types.go  session.go  state.go  types.go  utils.go
roboserver/tcp_server/: default.go  register.go  robot_communication.md  tcp_message.go  tcp_server.go  tcp_server_interface.go  tcp_server_test.go  transfer.go  utils.go
roboserver/terminal/: commands.go  event_bus_commands.go  init.go  robot_commands.go  terminal.go  terminal_interface.go
roboserver/udp_server/: udp_server.go
robot_sdk/c/: CMakeLists.txt
robot_sdk/c/examples/: test_robot.c  test_robot_mqtt.c  test_robot_udp.c
robot_sdk/c/include/: robomesh.h  robomesh_mqtt.h  robomesh_udp.h
robot_sdk/c/src/: robomesh.c  robomesh_mqtt.c  robomesh_udp.c
robot_sdk/c/tests/: test_integration.c
robot_sdk/python/: pyproject.toml
robot_sdk/python/examples/: test_robot.py  test_robot_mqtt.py  test_robot_udp.py
robot_sdk/python/robomesh_sdk/: __init__.py  admin.py  client.py  keys.py  mqtt_client.py  udp_client.py
robot_sdk/python/robomesh_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
robot_sdk/python/tests/: test_integration.py  test_mqtt_unit.py  test_udp_unit.py
robots/Learning/: components.md  notes.md  udp.md
scripts/: test_e2e.py
tests/integration/: conftest.py  requirements.txt  run.sh  test_cross_protocol.py  test_health.py  test_http.py  test_mqtt.py  test_tcp.py  test_udp.py
(+104 files in other folders)
