[project]
name = "robomesh-sdk"
version = "0.1.0"
description = "Python client library for robots communicating with Robomesh Roboserver"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
